--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Saaransh Mishra",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "socket.io": "^2.2.0"
   },
